Added dvi preview